Clean up site (#15)
* Fixed Formatting, Deleted irrelevant files, changed the const to a class in faq.js (#12)

* Added FAQ section from old HackTAMS website, updated fonts, colors a bit

* made the text lorum ipsem

* fixed more conflicts

* deleted a folder I accidentally made

* fixed mistakes when merging

* Used faq-box class for each faq and placed it in the proper file layout/format

* fixed some formatting and deleted irrelevant files. I also made the const into a class in faq.js

* Reformat all files (#13)

* Create basic components

* Rename App.js to app.js

* Rename App.css to app.css

* Add basic speakers section framework

* Create data folder

* Add more in speakers section + minor page organization

* Small changes to css and code format

* Reorganize files + fix-ish background color

* Home section background color change

* Reformat all files

Co-authored-by: The-Box-Lord <56173725+The-Box-Lord@users.noreply.github.com>

* Clean up website + font & color fixes (#14)

* Create basic components

* Rename App.js to app.js

* Rename App.css to app.css

* Add basic speakers section framework

* Create data folder

* Add more in speakers section + minor page organization

* Small changes to css and code format

* Reorganize files + fix-ish background color

* Home section background color change

* Reformat all files

* Clean up website + font & color fixes

Co-authored-by: The-Box-Lord <56173725+The-Box-Lord@users.noreply.github.com>

Co-authored-by: Adheesh Kadiresan <64273007+exploringsci@users.noreply.github.com>
Co-authored-by: The-Box-Lord <56173725+The-Box-Lord@users.noreply.github.com>

--- a/src/components/faq-box.css
+++ b/src/components/faq-box.css
@@ -1,21 +1,18 @@
 .faqbox {
     width: calc(100% - 30px);
-    background: #120063;
+    background: #c55dc3;
     padding: 5px;
-    border: #000000 solid 10px;
+    border: #c55dc3 solid 10px;
     margin: 10px 0;
     color: #fff;
     transition: max-height 0.6s;
-    transition: background-color 0.6s;
     max-height: 30px;
     overflow: hidden;
     cursor: pointer;
-    font-family: 'Arial, Helvetica, sans-serif';
 }
 
 .faqbox.open {
     max-height: 500px;
-    background-color: green;
 }
 
 .question {
@@ -23,5 +20,5 @@
 }
 
 .answer {
-    font-family: 'Arial, Helvetica, sans-serif';
+    font-family: 'Grandstander';
 }
