--- a/src/pages/footer.css
+++ b/src/pages/footer.css
@@ -2,26 +2,20 @@
 
 .footer {
     padding: 5rem 15vw 1rem;
-    padding-top: 5rem;
-    text-align: center;
+    background-color: #0f0f0f;
 }
 
 .footer-title {
-    width: 50%;
-    float: left;
     padding-bottom: 2rem;
-    margin: 0 5vw;
 }
 
 .footer-info {
-    float: left;
-    margin: 0 10vw;
+    margin: 1rem 0;
     font-size: 1rem;
     color: white;
 }
 
 .footer-links {
-    float: left;
     display: flex;
     justify-content: space-evenly;
 }
@@ -31,9 +25,9 @@
     width: 40px;
     margin-right: 4rem;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .footer-item:hover {
-    transition: 0.3s;
     transform: scale(1.15);
 }
