--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 #root {
-    --title-font: 'Patrick Hand', sans-serif;
-    --main-font: 'Open Sans', sans-serif;
-    --text-primary: #ffffff;
+    --primary1: #ed14ff;
+    --primary2: #836feb;
+    --primary3: #3abfef;
+    --background: #121212;
+
+    font-family: 'Open Sans', sans-serif;
+    color: #ffffff;
 }
 
 a {
@@ -18,45 +22,50 @@ a:hover {
 
 h1 {
     text-align: center;
-    font-family: var(--title-font);
-    font-size: 4rem;
-    margin: 1rem 0;
-    color: white;
+    font-weight: 700;
+    font-size: 2.5rem;
+    margin: 0 0 1rem;
 }
 
-h2 {
+p {
+    font-weight: 400;
+}
+
+/* h2 {
     text-align: center;
-    font-family: var(--title-font);
     font-size: 3.5rem;
     margin: 1rem 0;
-    color: white; 
 }
 
 h3 {
     text-align: center;
-    font-family: var(--title-font);
     font-size: 2rem;
     margin: 1rem 0;
-    color: white; 
-}
+} */
 
 .app {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     width: 100%;
-    padding-bottom: 0.01rem;
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 1rem;
-    background-color: #222;
+    /* padding-bottom: 0.01rem; */
 }
 
-.logo {
-    height: 5rem;
-    padding: 0.1rem;
+.section-break {
+    height: 0.8rem;
 }
 
-.more {
-    height: 50vw;
-    margin-bottom: 50px;
+.sb1 {
+    background-color: #555555;
+}
+
+.sb2 {
+    background-color: #444444;
+}
+
+.sb3 {
+    background-color: #3a3a3a;
+}
+
+.sb4 {
+    background-color: #333333;
 }
